--- a/first job/teacher homework/P22_7.html
+++ b/first job/teacher homework/P22_7.html
@@ -13,7 +13,7 @@
 				width:100% ;
 				height:50px ;
 				background-color: black;
-				color: white;
+				color: white;/*的说法是*/
 			}
 			.header .main{
 				width: 70%;
