--- a/first job/teacher homework/index.html
+++ b/first job/teacher homework/index.html
@@ -93,7 +93,7 @@
 			background-size: cover;
 		}
 		.png-大{
-			height: 600px;
+			height: 630px;
 			width: 1000px;
 			background-image: url(./img/天狗十月.jpg);
 			background-size: cover;
@@ -105,6 +105,29 @@
 			background-image: url(./img/big.jpg);
 			float: left;
 			background-size: cover;
+			transform:translateY(-207%);
+	-ms-transform:translateY(-207%);
+	-webkit-transform:translateY(-207%);
+
+		}
+		.big6{
+			width: 500px;
+			height: 200px;
+			background-image: url(./img/big\ \(6\).jpg);
+			background-size: cover;
+			transform:translateY(-100%);
+	-ms-transform:translateY(-100%);
+	-webkit-transform:translateY(-100%);
+		}
+		.divla{
+			transform:translateY(-150%);
+	-ms-transform:translateY(-150%);
+	-webkit-transform:translateY(-150%);
+		}
+		.p1{
+			height: 15;
+			width: 40;
+	background-image: url(./img/晚霞.jpg);
 		}
 	</style>
 </head>
@@ -156,7 +179,23 @@
 			<div class="png-大"></div>
 		</div>
 		<div class="bigg"></div>
-		
+		<div class="big6"></div>
+		<div class="divla">
+		<div class="p1">
+			<h3>
+				我们的客户
+			</h3>
+			<ui>
+				<li>文本1</li>
+				<li>文本2</li>
+				<li>文本3</li>
+				<li>文本4</li>
+			</ui>
+		</div>
+		<div class="p1"></div>
+		<div class="p2"></div>
+		<div class="p3"></div>
+		</div>
 </body>
 
 </html>
