--- a/first job/teacher homework/第五章 canvas路径和三角函数的故事/11-canvas绘图-笑脸绘制.html
+++ b/first job/teacher homework/第五章 canvas路径和三角函数的故事/11-canvas绘图-笑脸绘制.html
@@ -20,7 +20,7 @@
         var ctx=c7.getContext('2d');
         //arc(x, y, radius, startAngle, endAngle, anticlockwise)
         //x,y代表圆心的坐标   radius代表圆的半径
-        //startAngle 开始的角度   endAngle 结束的角度   Math.PI---180度
+        //startAngle 开始的角度   endAngle 结束的角度   Math.PI--->180度
         // anticlockwise 绘制方向 可不写  默认值为false，是顺时针绘制的意思
         
         //脸
